syntax = "proto3";

package gnboot;

import "openapiv3/annotations.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/liluoliluoli/gnboot/api/studio";

option (openapi.v3.document) = {
  info : {title : "genre adaptor";
version : "1.0.0";
description : "This is genre adaptor docs";
}
components : {
security_schemes: {
additional_properties:
  [{
    name:
      "BearerAuth";
    value: {
    security_scheme: {
    type:
      "http";
    scheme:
      "bearer";
    }
    }
  }]
}
}
  security: [
    {
      additional_properties: [
        {
          name: "BearerAuth";
          value: {
            value: []
          }
  }
      ]
      }
  ]
  }
  ;

  service StudioRemoteService {
    rpc FindStudio(FindStudioRequest) returns (FindStudioResp) {
      option (google.api.http) = {
        post : "/studio/query/all"
        body : "*"
      };
    }
  }

  message StudioResp {
    int32 id = 1;
    string name = 2;
    string country = 3;
    string logo = 4;
  }

  message FindStudioRequest {

  }

  message FindStudioResp {
    repeated StudioResp studios = 1;
  }
